# fastapi-arango-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_individual_tests.sh  wait-for-arangodb.sh
backend/: README.md  db.py  main.py
backend/routes/: __init__.py  api_router.py  entities.py
backend/schemas/: __init__.py
backend/services/: __init__.py
config/: collections.json
docs/: README.md  api_endpoint_creation_guide.md  basic_crud_api_generator_guide.md  template_system_guide.md
schemas/: category.schema.json  order.schema.json  order_product.schema.json  product.schema.json  product_category.schema.json  resource.schema.json  user.schema.json  user_order.schema.json
scripts/: cleanup_api_files.py  drop_all_collections.py  generate_basic_crud_api_endpoints.py  init_arangodb.py
scripts/templates/base/: routes.py.jinja  schema.py.jinja  service.py.jinja
scripts/templates/crud/: create.py.jinja  delete.py.jinja  get_all.py.jinja  get_by_key.py.jinja  get_filtered.py.jinja  update.py.jinja
scripts/templates/custom/: get_order_products.py.jinja  get_order_products_route.py.jinja
scripts/templates/edge/: get_by_from.py.jinja  get_by_from_to.py.jinja  get_by_to.py.jinja
scripts/templates/helpers/: entity_router_config.json.jinja  import_block.py.jinja  models_block.py.jinja  router_block.py.jinja  router_import.py.jinja
